[package]
name = "petgraph-fsm"
version = "0.1.0"
authors = ["Timothy Hobbs"]
edition = "2018"
license = "LGPL-3.0-or-later"
description = "Programmable finite state machines (automata) for rust"
homepage = "https://github.com/timthelion/petgraph-fsm"
repository = "https://github.com/timthelion/petgraph-fsm"


[features]
evcxr = ["petgraph-evcxr"]
default = []

[dependencies]
petgraph = {path="../petgraph"}
petgraph-evcxr = {path="../petgraph-evcxr", optional=true}
