[package]
name = "petgraph-zzstructure"
version = "0.1.0"
authors = ["Timothy Hobbs"]
edition = "2018"
license = "LGPL-3.0-or-later"
description = "zzStructures implemented in petgraph"
homepage = "https://github.com/timthelion/petgraph-zzstructure"
repository = "https://github.com/timthelion/petgraph-zzstructure"


[features]
evcxr = ["petgraph-evcxr"]
default = []

[dependencies]
petgraph = {path="../petgraph"}
petgraph-evcxr = {path="../petgraph-evcxr", optional=true}
